--- a/Journal/Journal/Views/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Views/Base.lproj/Main.storyboard
@@ -61,6 +61,7 @@
                                     <outlet property="entryTextLabel" destination="tYR-CZ-8Qk" id="Apy-Nc-GFT"/>
                                     <outlet property="entryTimestampLabel" destination="ajj-da-JC6" id="Ufh-En-zHg"/>
                                     <outlet property="entryTitleLabel" destination="OHr-2c-RgP" id="bkJ-qk-1lq"/>
+                                    <segue destination="fVM-GY-ZNB" kind="show" identifier="ToEntryDetail" id="d2z-0L-Uez"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -80,6 +81,81 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Tv0-Ty-ePH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="423.1884057971015" y="26.785714285714285"/>
+        </scene>
+        <!--Journal Entry-->
+        <scene sceneID="GDa-ZL-yMr">
+            <objects>
+                <viewController id="fVM-GY-ZNB" customClass="EntryDetailViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="VKF-rg-tMl">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Journal Entry Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Pul-fL-i3a">
+                                <rect key="frame" x="20" y="150" width="374" height="36"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="36" id="5Bn-Ns-rlS"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="P4h-Sd-JzM">
+                                <rect key="frame" x="20" y="194" width="374" height="379"/>
+                                <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="1" translatesAutoresizingMaskIntoConstraints="NO" id="G7b-NL-bHt">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="32"/>
+                                        <segments>
+                                            <segment title="  🥺"/>
+                                            <segment title="😐"/>
+                                            <segment title="😃"/>
+                                        </segments>
+                                    </segmentedControl>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entry" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EA5-sQ-kQP">
+                                        <rect key="frame" x="0.0" y="35" width="374" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
+                                        <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_________________________________________________________________________________" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1ES-oW-akn">
+                                        <rect key="frame" x="0.0" y="56" width="374" height="12"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                        <color key="textColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OJj-lQ-ICP">
+                                        <rect key="frame" x="0.0" y="72" width="374" height="307"/>
+                                        <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="307" id="WWS-KP-khu"/>
+                                            <constraint firstAttribute="width" constant="374" id="aid-Uv-bjq"/>
+                                        </constraints>
+                                        <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="P4h-Sd-JzM" firstAttribute="leading" secondItem="AXf-3k-Sit" secondAttribute="leading" constant="20" id="03H-9e-vKD"/>
+                            <constraint firstItem="P4h-Sd-JzM" firstAttribute="top" secondItem="Pul-fL-i3a" secondAttribute="bottom" constant="8" id="5e2-Eh-u5w"/>
+                            <constraint firstItem="Pul-fL-i3a" firstAttribute="leading" secondItem="AXf-3k-Sit" secondAttribute="leading" constant="20" id="8ay-W1-XyK"/>
+                            <constraint firstItem="Pul-fL-i3a" firstAttribute="top" secondItem="AXf-3k-Sit" secondAttribute="top" constant="10" id="bIl-kF-Udp"/>
+                            <constraint firstItem="AXf-3k-Sit" firstAttribute="trailing" secondItem="P4h-Sd-JzM" secondAttribute="trailing" constant="20" id="mFF-aU-PYb"/>
+                            <constraint firstItem="AXf-3k-Sit" firstAttribute="trailing" secondItem="Pul-fL-i3a" secondAttribute="trailing" constant="20" id="mxq-hn-T84"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="AXf-3k-Sit"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Journal Entry" id="QbU-gZ-tS5"/>
+                    <connections>
+                        <outlet property="emotionSegmentedController" destination="G7b-NL-bHt" id="LP3-nf-b67"/>
+                        <outlet property="entryTextView" destination="OJj-lQ-ICP" id="LZu-De-hD6"/>
+                        <outlet property="entryTitleTextField" destination="Pul-fL-i3a" id="TFE-5R-l08"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="A9Q-ku-wn0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1367" y="541"/>
         </scene>
         <!--Create Entry-->
         <scene sceneID="wCt-41-Ogf">
@@ -106,7 +182,7 @@
                                         <segments>
                                             <segment title="  🥺"/>
                                             <segment title="😐"/>
-                                            <segment title="😃"/>
+                                            <segment title="😁"/>
                                         </segments>
                                     </segmentedControl>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entry" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YqP-77-N6Z">
