--- a/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Base.lproj/Main.storyboard
@@ -66,6 +66,7 @@
                                     <outlet property="entryBody" destination="TCF-3d-mFV" id="pWe-8v-Gz9"/>
                                     <outlet property="entryDate" destination="2xd-ga-kwi" id="sng-rF-HQr"/>
                                     <outlet property="entryTitle" destination="4HE-r9-TMQ" id="DII-yW-jaM"/>
+                                    <segue destination="dv7-ef-lsy" kind="show" identifier="ShowEntryDetail" id="9Si-vg-hZd"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -95,7 +96,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="pUe-0t-6bA">
-                                <rect key="frame" x="20" y="108" width="374" height="367"/>
+                                <rect key="frame" x="20" y="160" width="374" height="341"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Journal Entry Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zQV-6y-2b9">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="30"/>
@@ -114,7 +115,7 @@
                                         </segments>
                                     </segmentedControl>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="EdC-Ed-p6E">
-                                        <rect key="frame" x="0.0" y="91" width="374" height="276"/>
+                                        <rect key="frame" x="0.0" y="91" width="374" height="250"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ENTRY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UkK-DR-QjU">
                                                 <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
@@ -130,7 +131,7 @@
                                                 </constraints>
                                             </view>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="7JS-iw-9JE">
-                                                <rect key="frame" x="0.0" y="38.5" width="374" height="237.5"/>
+                                                <rect key="frame" x="0.0" y="38.5" width="374" height="211.5"/>
                                                 <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -190,13 +191,88 @@
             </objects>
             <point key="canvasLocation" x="-691.304347826087" y="138.61607142857142"/>
         </scene>
+        <!--Entry Details-->
+        <scene sceneID="y43-La-WZC">
+            <objects>
+                <viewController id="dv7-ef-lsy" customClass="EntryDetailViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="KAT-0h-oUk">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="JJt-rw-GYd">
+                                <rect key="frame" x="20" y="160" width="374" height="341"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Journal Entry Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="I8R-aE-GPo">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="666-vm-FLc"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="1PW-tX-TBJ">
+                                        <rect key="frame" x="0.0" y="45" width="374" height="32"/>
+                                        <segments>
+                                            <segment title="😃"/>
+                                            <segment title="😐"/>
+                                            <segment title="😭"/>
+                                        </segments>
+                                    </segmentedControl>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Gxo-xm-Fjp">
+                                        <rect key="frame" x="0.0" y="91" width="374" height="250"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ENTRY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SYe-hq-KDc">
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="29x-Fq-HTn">
+                                                <rect key="frame" x="0.0" y="28.5" width="374" height="2"/>
+                                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="2" id="wmw-DG-tdL"/>
+                                                </constraints>
+                                            </view>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="pkS-te-eQZ">
+                                                <rect key="frame" x="0.0" y="38.5" width="374" height="211.5"/>
+                                                <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="JJt-rw-GYd" firstAttribute="top" secondItem="ZjM-ir-h7z" secondAttribute="top" constant="20" id="1vx-7z-0SM"/>
+                            <constraint firstItem="JJt-rw-GYd" firstAttribute="height" secondItem="KAT-0h-oUk" secondAttribute="height" multiplier="0.38058" id="7pr-4h-6Us"/>
+                            <constraint firstItem="ZjM-ir-h7z" firstAttribute="trailing" secondItem="JJt-rw-GYd" secondAttribute="trailing" constant="20" id="90e-Zn-qbo"/>
+                            <constraint firstItem="JJt-rw-GYd" firstAttribute="leading" secondItem="ZjM-ir-h7z" secondAttribute="leading" constant="20" id="Ax4-4t-eBk"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="ZjM-ir-h7z"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Entry Details" id="ncg-Nw-mPb"/>
+                    <connections>
+                        <outlet property="bodyTextView" destination="pkS-te-eQZ" id="x1E-qP-7WW"/>
+                        <outlet property="moodControl" destination="1PW-tX-TBJ" id="igV-Ox-lVl"/>
+                        <outlet property="titleTextField" destination="I8R-aE-GPo" id="5wl-sq-Bgr"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="If4-6y-xFX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1048" y="-522"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="iT2-eO-HFI">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="2FC-vl-8kX" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="qxf-7W-WQc">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="qxf-7W-WQc">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
