--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -16,18 +16,26 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="sQt-cw-8dN">
-                                <rect key="frame" x="10" y="98" width="394" height="193.5"/>
+                                <rect key="frame" x="10" y="150" width="394" height="141.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="mGT-pg-YJS">
-                                        <rect key="frame" x="0.0" y="0.0" width="394" height="57.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="394" height="103.5"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Journal Entry Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3m2-NN-YTJ">
                                                 <rect key="frame" x="0.0" y="0.0" width="394" height="22"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
+                                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="1" translatesAutoresizingMaskIntoConstraints="NO" id="9dB-W3-OMR">
+                                                <rect key="frame" x="0.0" y="37" width="394" height="32"/>
+                                                <segments>
+                                                    <segment title="😭"/>
+                                                    <segment title="😐"/>
+                                                    <segment title="😊"/>
+                                                </segments>
+                                            </segmentedControl>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entry" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="apt-EA-WCl">
-                                                <rect key="frame" x="0.0" y="37" width="394" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="83" width="394" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -35,7 +43,7 @@
                                         </subviews>
                                     </stackView>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3EA-y5-8jZ">
-                                        <rect key="frame" x="0.0" y="65.5" width="394" height="128"/>
+                                        <rect key="frame" x="0.0" y="111.5" width="394" height="30"/>
                                         <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -68,6 +76,7 @@
                     <connections>
                         <outlet property="articleTextView" destination="3EA-y5-8jZ" id="9Jo-rK-HqG"/>
                         <outlet property="entryTitleTextField" destination="3m2-NN-YTJ" id="Gwp-nI-2yF"/>
+                        <outlet property="moodSegmentedControl" destination="9dB-W3-OMR" id="9v1-m0-MXK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -130,6 +139,7 @@
                                     <outlet property="articleLabel" destination="WDh-ol-TpM" id="4yW-gi-6f9"/>
                                     <outlet property="dateLabel" destination="sZ5-TM-szl" id="VJl-Om-lHW"/>
                                     <outlet property="titleLabel" destination="8RN-5f-G7s" id="S4l-Gw-gIN"/>
+                                    <segue destination="PJl-br-bLr" kind="show" identifier="ToEntryDetail" id="ZKh-Ec-Bjk"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -173,8 +183,8 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="zjx-1G-7tM" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="YkY-gB-1zG">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="YkY-gB-1zG">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -185,6 +195,71 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gAb-wL-Bnf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2630" y="98"/>
+        </scene>
+        <!--Entry-->
+        <scene sceneID="9b2-0d-54N">
+            <objects>
+                <viewController id="PJl-br-bLr" customClass="EntryDetailViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="AKP-eT-MZq">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="EXB-wj-yGu">
+                                <rect key="frame" x="20" y="160" width="374" height="161.5"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="omJ-az-tJG">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="103.5"/>
+                                        <subviews>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Journal Entry Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mP6-oe-lwj">
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="22"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="1" translatesAutoresizingMaskIntoConstraints="NO" id="5Ej-ri-8fo">
+                                                <rect key="frame" x="0.0" y="37" width="374" height="32"/>
+                                                <segments>
+                                                    <segment title="😭"/>
+                                                    <segment title="😐"/>
+                                                    <segment title="😊"/>
+                                                </segments>
+                                            </segmentedControl>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entry" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gV7-Fk-vF8">
+                                                <rect key="frame" x="0.0" y="83" width="374" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dh2-xN-dN6">
+                                        <rect key="frame" x="0.0" y="111.5" width="374" height="50"/>
+                                        <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="EXB-wj-yGu" firstAttribute="top" secondItem="I4Q-Zx-o7x" secondAttribute="top" constant="20" id="LIm-yj-bEf"/>
+                            <constraint firstItem="I4Q-Zx-o7x" firstAttribute="trailing" secondItem="EXB-wj-yGu" secondAttribute="trailing" constant="20" id="UO9-ms-BZV"/>
+                            <constraint firstItem="EXB-wj-yGu" firstAttribute="leading" secondItem="I4Q-Zx-o7x" secondAttribute="leading" constant="20" id="bZv-Om-Af3"/>
+                            <constraint firstItem="EXB-wj-yGu" firstAttribute="height" secondItem="AKP-eT-MZq" secondAttribute="height" multiplier="0.180246" id="onF-3F-Z1I"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="I4Q-Zx-o7x"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Entry" id="KI3-Zu-GjY"/>
+                    <connections>
+                        <outlet property="entryTextView" destination="dh2-xN-dN6" id="Rl7-af-EOb"/>
+                        <outlet property="moodSegmentedControl" destination="5Ej-ri-8fo" id="cZu-1z-1fE"/>
+                        <outlet property="titleTextField" destination="mP6-oe-lwj" id="aae-Ni-r6y"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="m6g-1q-NGa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2629" y="825"/>
         </scene>
     </scenes>
 </document>
